fixed navbar missalignment

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -21,7 +21,8 @@ $icon-list: github, frontend-mentor, linkedin, twitter;
   }
 
   & > .socials {
-    margin-right: 2rem;
+    //margin-right: 2rem;
+    padding-inline: 2rem;
     z-index: 10;
     @include flex-center;
     gap: 2.5rem;
